--- a/about-us.html
+++ b/about-us.html
@@ -15,8 +15,23 @@
 <body>
     <header id="header"></header>
 
-    <section class="hero-section py-0">
-        <h1>New horizons for weaving</h1>
+    <section class="about-bg hero-section py-0"></section>
+
+
+    <section class="about-sec">
+        <div class="container">
+            <div class="row row-gap-4 align-items-center">
+                <div class="col-lg-6">
+                    <img src="./img/about/about2.jpg" alt="About us" class="img-fluid" />
+                </div>
+                <div class="col-lg-5 text-center text-lg-start">
+                    <h2 class="mb-3 mb-lg-5 about-title">“Traditional craftmanship and design are parts of the
+                        deep-rooted cultural heritage of Morocco.”</h2>
+                    <p class="mb-0">Designed in Switzerland and made in Morocco, our rugs are a bridge between two
+                        cultures.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="collection-sec">
@@ -40,22 +55,46 @@
     <section class="about-sec">
         <div class="container">
             <div class="row row-gap-4 align-items-center">
-                <div class="col-lg-6 position-relative">
-                    <img src="./img/about-sec.jpg" alt="About us" class="img-fluid" />
-                    <p class="about-head">About us</p>
-                </div>
-                <div class="col-lg-5 offset-lg-1 text-center text-lg-start">
-                    <h2 class="mb-3 mb-lg-5 about-title">Creativity runs through <span class="d-block">the veins
-                            of</span>
-                        <span class="d-block text-uppercase">khalida toukkani,</span>
-                        the founder of
-                        My Moroccan Rug.
+                <div class="col-lg-5 text-center text-lg-start">
+                    <h2 class="mb-3 mb-lg-5 about-title">Creativity runs through the veins of
+                        <span class="text-uppercase d-lg-block">Khalida Toukkani,</span>
+                        The founder of My Moroccan Rug
                     </h2>
-                    <a href="#" class="btn btn-outline-secondary">Know More</a>
+                    <p>Born in Morocco and raised in Paris, and the daughter of a dress designer, Khalida was naturally
+                        destined to follow in her mother's creative footsteps</p>
+                </div>
+                <div class="col-lg-6 offset-lg-1 position-relative">
+                    <img src="./img/about-sec.jpg" alt="The Founder" class="img-fluid" />
+                    <p class="about-head">The Founder</p>
                 </div>
             </div>
         </div>
     </section>
+
+
+    <section class="video-sec">
+        <div class="container">
+            <div class="row mb-3">
+                <div class="col-12">
+                    <h2 class="text-center mb-lg-5 mb-3">Our Journey</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 mx-auto">
+                    <div class="video position-relative">
+                        <img src="img/video-bg.jpg" alt="" class="img-fluid" />
+                        <button id="yt-vid" class="border-0 bg-transparent" youtubeid="2-crBg6wpp0">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="4em" fill="#EFEEE9" viewBox="0 0 384 512">
+                                <path
+                                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <section class="product-sec position-relative">
@@ -103,37 +142,6 @@
                     <button class="next-arrow">
                         <img src="img/slick-arrow.png" alt="Right Arrow" />
                     </button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section class="video-sec">
-        <div class="container">
-            <div class="row mb-3">
-                <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">As seen in</h2>
-                </div>
-                <div class="col-lg-9 mx-auto text-center">
-                    <div class="d-flex justify-content-between brand-logos mb-5">
-                        <img src="img/wohnervue-logo.jpg" alt="" class="img-fluid" />
-                        <img src="img/decor-logo.jpg" alt="" class="img-fluid" />
-                        <img src="img/goout-logo.jpg" alt="" class="img-fluid" />
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <div class="video position-relative">
-                        <img src="img/video-bg.jpg" alt="" class="img-fluid" />
-                        <button id="yt-vid" class="border-0 bg-transparent" youtubeid="2-crBg6wpp0">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="4em" fill="#EFEEE9" viewBox="0 0 384 512">
-                                <path
-                                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z" />
-                            </svg>
-                        </button>
-                    </div>
                 </div>
             </div>
         </div>
