--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khalida Toukkani</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
@@ -21,7 +22,7 @@
     <section class="about-sec">
         <div class="container">
             <div class="row row-gap-4 align-items-center">
-                <div class="col-lg-6">
+                <div class="col-lg-6  text-lg-start text-center">
                     <img src="./img/about/about2.jpg" alt="About us" class="img-fluid" />
                 </div>
                 <div class="col-lg-5 text-center text-lg-start">
@@ -51,7 +52,7 @@
 
     <section class="about-sec">
         <div class="container">
-            <div class="row row-gap-4 align-items-center">
+            <div class="row row-gap-4 align-items-center reverse">
                 <div class="col-lg-5 text-center text-lg-start">
                     <h2 class="mb-3 mb-lg-5 about-title">Creativity runs through the veins of
                         <span class="text-uppercase d-lg-block">Khalida Toukkani,</span>
@@ -288,7 +289,7 @@
     </section>
 
 
-    <section class="contact-sec">
+    <section class="contact-sec font-opt">
         <div class="container">
             <div class="row">
                 <div class="col-12">
