--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khalida Toukkani</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
 
-<body>
+<body class="home-page">
     <header id="header"></header>
 
     <section class="hero-section py-0">
@@ -165,7 +166,7 @@
     </section>
 
 
-    <section class="contact-sec">
+    <section class="contact-sec font-opt">
         <div class="container">
             <div class="row">
                 <div class="col-12">
