--- a/collection-inner.html
+++ b/collection-inner.html
@@ -47,13 +47,13 @@
                             aria-labelledby="pills-home-tab" tabindex="0">
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <a href="#" class="text-center ">
+                                    <a href="./product-detail.html" class="text-center ">
                                         <img src="./img/product-1.jpg" alt="" class="img-fluid" />
                                         <h4 class="mt-4">Beeda oval rug</h4>
                                     </a>
                                 </div>
                                 <div class="col-lg-4">
-                                    <a href="#" class="text-center ">
+                                    <a href="./product-detail.html" class="text-center ">
                                         <img src="./img/product-2.jpg" alt="" class="img-fluid" />
                                         <h4 class="mt-4">California Rug</h4>
                                     </a>
