--- a/collection.html
+++ b/collection.html
@@ -32,25 +32,25 @@
                 <div class="col-lg-8 mx-auto">
                     <div class="row row-gap-5">
                         <div class="col-lg-6">
-                            <a href="#" class="text-center ">
+                            <a href="./collection-inner.html" class="text-center ">
                                 <h4 class="mb-4">Rugs</h4>
                                 <img src="./img/product-1.jpg" alt="" class="img-fluid" />
                             </a>
                         </div>
                         <div class="col-lg-6">
-                            <a href="#" class="text-center ">
+                            <a href="./collection-inner.html" class="text-center ">
                                 <h4 class="mb-4">Head Boards</h4>
                                 <img src="./img/product-2.jpg" alt="" class="img-fluid" />
                             </a>
                         </div>
                         <div class="col-lg-6">
-                            <a href="#" class="text-center ">
+                            <a href="./collection-inner.html" class="text-center ">
                                 <h4 class="mb-4">Art wall</h4>
                                 <img src="./img/product-3.jpg" alt="" class="img-fluid" />
                             </a>
                         </div>
                         <div class="col-lg-6">
-                            <a href="#" class="text-center ">
+                            <a href="./collection-inner.html" class="text-center ">
                                 <h4 class="mb-4">Pouf</h4>
                                 <img src="./img/product-2.jpg" alt="" class="img-fluid" />
                             </a>
