--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css?v=1.2">
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
@@ -340,6 +341,7 @@
     <footer id="footer"></footer>
 
     <script src="js/jquery.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/smoothscroll.min.js"></script>
     <script src="js/slick.min.js"></script>
