--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css?v=1.2">
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
@@ -17,7 +18,9 @@
     <header id="header"></header>
 
     <section class="hero-section py-0">
-        <h1>New horizons for weaving</h1>
+        <div class="hero-title">
+            <h1 data-aos="zoom-in">New horizons for weaving</h1>
+        </div>
     </section>
 
     <section class="collection-sec">
@@ -217,6 +220,7 @@
     <footer id="footer"></footer>
 
     <script src="js/jquery.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/smoothscroll.min.js"></script>
     <script src="js/slick.min.js"></script>
